Fix header name formatting in index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-        <h1>Surendra Sade</h1>
+        <h1>Surendra.Sade</h1>
         <p class="subtitle">DevOps Engineer | 3 Years of Experience</p>
     </header>
     
